Make getters and setters because class variable fields should not have public accessibility